<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_yellow"
    android:orientation="vertical" >

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practice_title_label" />

    <EditText
        android:id="@+id/et_practice_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/practice_title_hint" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practice_target_label" />

        <EditText
            android:id="@+id/et_practice_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_remainder_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/practice_remainder_label" />

        <TextView
            android:id="@+id/tv_remainder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/date_top_selector"
        android:clickable="true"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/startdate_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_date_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/next" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/iv_date_next"
            android:gravity="center_vertical"
            android:text="@string/date_example"
            android:textColor="@color/text_grey"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_end"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/date_bottom_selector"
        android:clickable="true"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/enddate_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_date_bottom_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/next" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/iv_date_bottom_next"
            android:gravity="center_vertical"
            android:text="@string/date_example"
            android:textColor="@color/text_grey"
            android:textSize="12sp" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_fragment_practice"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_go" />

    <Button
        android:id="@+id/btn_see"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_see" />

</LinearLayout>